Add editable workout screen and FitNotes import
